Navbar and Footer

--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
 		<title>Byte Sized Studios</title>
 		<link rel="icon" type="image/x-icon" href="">
 		
-		<meta charset="UTF-8">
-		<meta>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<link rel="StyleSheet" href="Style/Portfolio.css">
 	</head>
 	<body>
 		<!-- Nav bar -->
-		<div class="NavBar">
-			
-		</div>
+		<ul>
+			<li><a href=""><img src="Pictures/Icons/About_Icon.png"><b>About</b></a></li>
+			<li><a href=""><img src="Pictures/Icons/Projects_Icon.png"><b>Projects</b></a></li>
+			<li><a href=""><img src="Pictures/Icons/Contact_Icon.png"><b>Contact</b></a></li>
+			<li><a href=""><img src="Pictures/Icons/Resume_Icon.png"><b>Resume</b></a></li>
+		</ul>
 		
 		<!-- Introduction -->
-		<div class="Introduction">
+		<div class="About">
 		
 		</div>
 		
@@ -27,10 +32,15 @@
 		<div class="FeaturedProjects">
 		
 		</div>
+
+		<!-- Contact -->
+		<div class="Contact">
+			
+		</div>
 		
 		<!-- Footer -->
 		<div class="Footer">
-		
+			<p><b>Copyright &copy by Peter Tran | All images, logos are used with permission.</b></p>
 		</div>
 	</body>
 </html>
