--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="StyleSheet" href="Style/Portfolio.css">
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<!-- Nav bar -->
 		<ul>
-			<li><a href=""><img src="Pictures/Icons/About_Icon.png"><b>About</b></a></li>
-			<li><a href=""><img src="Pictures/Icons/Projects_Icon.png"><b>Projects</b></a></li>
-			<li><a href=""><img src="Pictures/Icons/Contact_Icon.png"><b>Contact</b></a></li>
-			<li><a href=""><img src="Pictures/Icons/Resume_Icon.png"><b>Resume</b></a></li>
+			<li><a href=""><img src="Pictures/Icons/About_Icon.png">About</a></li>
+			<li><a href=""><img src="Pictures/Icons/Projects_Icon.png">Projects</a></li>
+			<li><a href=""><img src="Pictures/Icons/Contact_Icon.png">Contact</a></li>
+			<li><a href=""><img src="Pictures/Icons/Resume_Icon.png">Resume</a></li>
 		</ul>
 		
 		<!-- Introduction -->
@@ -35,12 +36,19 @@
 
 		<!-- Contact -->
 		<div class="Contact">
-			
+			<h3>Contact Me</h3>
+			<p>Please feel free to contact me here: .You can also find me on these social media platforms:</p>
+			<a href=""><img id="SocialMedia" src="Pictures/Logos/Linkedin_Logo.png"></a>
+			<a href=""><img id="SocialMedia" src="Pictures/Logos/Github_Logo.png"></a>
+			<a href=""><img id="SocialMedia" src="Pictures/Logos/Sketchfab_Logo.png"></a>
+			<a href=""><img id="SocialMedia" src="Pictures/Logos/Twitter_Logo.png"></a>
+			<a href=""><img id="SocialMedia" src="Pictures/Logos/Youtube_Logo.png"></a>
+			<a href=""><img id="SocialMedia" src="Pictures/Logos/Twitch_Logo.png"></a>
 		</div>
 		
 		<!-- Footer -->
 		<div class="Footer">
-			<p><b>Copyright &copy by Peter Tran | All images, logos are used with permission.</b></p>
+			<p>Copyright &copy by Peter Tran | All images, logos are used with permission.</p>
 		</div>
 	</body>
 </html>
