--- a/index.html
+++ b/index.html
@@ -8,42 +8,42 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="StyleSheet" href="Style/Portfolio.css">
+		<!--<link rel="StyleSheet" href="Style/ContentStyle.css">-->
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<!-- Nav bar -->
 		<ul>
-			<li><a href=""><img src="Pictures/Icons/About_Icon.png">About</a></li>
-			<li><a href=""><img src="Pictures/Icons/Projects_Icon.png">Projects</a></li>
-			<li><a href=""><img src="Pictures/Icons/Contact_Icon.png">Contact</a></li>
-			<li><a href=""><img src="Pictures/Icons/Resume_Icon.png">Resume</a></li>
+			<li><a href="#About_Section"><img src="Pictures/Icons/About_Icon.png">About</a></li>
+			<li><a href="#Projects_Section"><img src="Pictures/Icons/Projects_Icon.png">Projects</a></li>
+			<li><a href="#Contact_Section"><img src="Pictures/Icons/Contact_Icon.png">Contact</a></li>
+			<li><a href="Downloadables/Resume.pdf" download><img src="Pictures/Icons/Resume_Icon.png">Resume</a></li>
 		</ul>
 		
 		<!-- Introduction -->
-		<div class="About">
+		<div class="About" id="About_Section">
 		
 		</div>
 		
 		<!-- Game Engine -->
-		<div class="GameEngine">
+		<div class="GameEngine" id="Engine_Section">
 		
 		</div>
 		
 		<!-- Featured Projects -->
-		<div class="FeaturedProjects">
+		<div class="FeaturedProjects" id="Projects_Section">
 		
 		</div>
 
 		<!-- Contact -->
-		<div class="Contact">
-			<h3>Contact Me</h3>
-			<p>Please feel free to contact me here: .You can also find me on these social media platforms:</p>
-			<a href=""><img id="SocialMedia" src="Pictures/Logos/Linkedin_Logo.png"></a>
-			<a href=""><img id="SocialMedia" src="Pictures/Logos/Github_Logo.png"></a>
-			<a href=""><img id="SocialMedia" src="Pictures/Logos/Sketchfab_Logo.png"></a>
-			<a href=""><img id="SocialMedia" src="Pictures/Logos/Twitter_Logo.png"></a>
-			<a href=""><img id="SocialMedia" src="Pictures/Logos/Youtube_Logo.png"></a>
-			<a href=""><img id="SocialMedia" src="Pictures/Logos/Twitch_Logo.png"></a>
+		<div class="Contact" id="Contact_Section">
+			<h1>Contact Me</h1>
+			<p>Please feel free to <a href="mailto:peter.tranz.6225@gmail.com">email</a> me. You can also find me on these social media platforms:</p>
+			<a href="https://www.linkedin.com/in/petertran00/"><img id="SocialMedia" src="Pictures/Logos/Linkedin_Logo.png"></a>
+			<a href="https://github.com/ByteSizedStudios"><img id="SocialMedia" src="Pictures/Logos/Github_Logo.png"></a>
+			<a href="https://sketchfab.com/MByteSizedStudio"><img id="SocialMedia" src="Pictures/Logos/Sketchfab_Logo.png"></a>
+			<a href="https://twitter.com/CookiesNull"><img id="SocialMedia" src="Pictures/Logos/Twitter_Logo.png"></a>
+			<a href="https://www.youtube.com/@ManyBytesStudios"><img id="SocialMedia" src="Pictures/Logos/Youtube_Logo.png"></a>
 		</div>
 		
 		<!-- Footer -->
