--- a/index.html
+++ b/index.html
@@ -6,33 +6,39 @@
 		
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<script src="Scripts/Portfolio.js"></script>
 
-		<link rel="StyleSheet" href="Style/Portfolio.css">
-		<!--<link rel="StyleSheet" href="Style/ContentStyle.css">-->
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+		<link rel="StyleSheet" href="Styles/Portfolio.css">
+		<link rel="StyleSheet" href="Styles/ContentStyle.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap">
 	</head>
 	<body>
 		<!-- Nav bar -->
-		<ul>
+		<ul class="NavBar" id="Nav">
+			<li><a href="">Home</a></li>
 			<li><a href="#About_Section"><img src="Pictures/Icons/About_Icon.png">About</a></li>
 			<li><a href="#Projects_Section"><img src="Pictures/Icons/Projects_Icon.png">Projects</a></li>
 			<li><a href="#Contact_Section"><img src="Pictures/Icons/Contact_Icon.png">Contact</a></li>
 			<li><a href="Downloadables/Resume.pdf" download><img src="Pictures/Icons/Resume_Icon.png">Resume</a></li>
+			<li class="Icon">
+				<a href="javascript:void(0);" onclick="toggleMenu()">&#9776;</a>
+			</li>
 		</ul>
 		
 		<!-- Introduction -->
 		<div class="About" id="About_Section">
-		
+			
 		</div>
 		
 		<!-- Game Engine -->
 		<div class="GameEngine" id="Engine_Section">
-		
+			
 		</div>
 		
 		<!-- Featured Projects -->
 		<div class="FeaturedProjects" id="Projects_Section">
-		
+			
 		</div>
 
 		<!-- Contact -->
