--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Nav bar -->
 		<ul class="NavBar" id="Nav">
 			<div class="LeftMenu">
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">Peter Tran | Byte Sized Studios</a></li>
 			</div>
 			<div class="RightMenu">
 				<li><a href="#About_Section"><img src="Pictures/Icons/About_Icon.png">About</a></li>
@@ -30,6 +30,51 @@
 			</li>
 		</ul>
 		
-		
+		<div class="PortfolioContent">
+			<!-- About Section -->
+			<div class="About">
+				<div class="SectionHeader">
+					<span class="SectionTitle"><b>About Me</b></span>
+					<hr class="SectionDivider">
+				</div>
+				<div Class="SectionContent">
+					<p>Hello! My name is Peter, and I’m a passionate game developer from Canada. I hold degrees in Game Programming from Humber College and Information Technology from York University, which together provide me with a solid foundation in both the technical and creative aspects of game development.</p>
+					<p>In this portfolio, you’ll find a collection of my personal projects that showcase my skills in game design, programming, and 3D modeling. I specialize in using the Unity game engine and programming in C#, where I’ve developed a range of gameplay mechanics and interactive experiences. Additionally, I have hands-on experience in 3D modeling with Blender and 3Ds Max, enabling me to create detailed assets for my games.</p>
+					<p>Currently, I’m working on an ambitious project: developing my own game engine in C++. This endeavor is challenging my technical expertise and deepening my understanding of the intricacies of game development.</p>
+				</div>
+			</div>
+			
+			<!-- Featured Projects -->
+			<div class="FeaturedProjects">
+				<div class="SectionHeader">
+					<span class="SectionTitle"><b>Featured Projects</b></span>
+					<hr class="SectionDivider">
+				</div>
+				<div Class="SectionContent">
+					
+				</div>
+			</div>
+			
+			<!-- Contact Section -->
+			<div class="Contact">
+				<div class="SectionHeader">
+					<span class="SectionTitle"><b>Contact Me</b></span>
+					<hr class="SectionDivider">
+				</div>
+				<div Class="SectionContent">
+					<p>Please feel free to <a href="mailto:peter.tranz.6225@gmail.com">email</a> me. You can also find me on these social media platforms:</p>
+					<a href="https://www.linkedin.com/in/petertran00/"><img id="SocialMedia" src="Pictures/Logos/Linkedin_Logo.png"></a>
+					<a href="https://github.com/ByteSizedStudios"><img id="SocialMedia" src="Pictures/Logos/Github_Logo.png"></a>
+					<a href="https://sketchfab.com/MByteSizedStudio"><img id="SocialMedia" src="Pictures/Logos/Sketchfab_Logo.png"></a>
+					<a href="https://twitter.com/CookiesNull"><img id="SocialMedia" src="Pictures/Logos/Twitter_Logo.png"></a>
+					<a href="https://www.youtube.com/@ManyBytesStudios"><img id="SocialMedia" src="Pictures/Logos/Youtube_Logo.png"></a>
+				</div>
+			</div>
+			
+			<!-- Footer Section-->
+			<div class="Footer">
+				<p>Copyright &copy by Peter Tran | All images, logos are used with permission.</p>
+			</div>
+		</div>
 	</body>
 </html>
